Add Deezer song downloader and dataset scripts
Added scripts for collecting song previews from Deezer, including parallel download, checkpointing, and statistics visualization. Updated .gitignore for new dataset and output files, added yt-dlp to requirements, and included initial dataset and checkpoint files.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ audio_files_1/
 audio_files_2/
 audio_files_all
 src/data_collection/audio_files/
+millionsongsubset_extracted/
+millionsongsubset.tar.gz
 results/
 processed_results/
 __pycache__/
