--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,8 @@ torch>=2.0.0
 pydub>=0.25.0
 requests>=2.25.0
 yt-dlp>=2023.12.28
+openl3>=0.4.0
+crepe>=0.0.12
+madmom>=0.16.1
+transformers>=4.30.0
+tensorflow>=2.10.0
